change .env to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-SECRET_KEY='django-insecure-3=!y6weg%4_kz(c)m!xmjg#)j=u85j70$a9)9k$^3^w!=^74l*'
+#Here should be:
 
-DEBUG=True
+#DEBUG
+
+#SECRET_KEY
