--- a/.gitignore
+++ b/.gitignore
@@ -377,4 +377,6 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+kitchen/migrations
+
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,django
