--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: restaurant_kitchen_service
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m uvicorn restaurant_kitchen_service.asgi:application --port 8001"
+    startCommand: "python -m gunicorn restaurant_kitchen_service.wsgi:application --port 8000"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
